Fixed Margins to be flat and not behind

--- a/css/markdown-style.css
+++ b/css/markdown-style.css
@@ -1,4 +1,4 @@
-/* 2021-03-03 */
+/* 2021-06-06 */
 
 body {
 	font-size: 15px;
@@ -6,6 +6,7 @@ body {
 	margin: 0;
     padding-right: 10%;
     padding-left: 10%;
+    margin-left: 15px;
 }
 
 h1 {
@@ -15,7 +16,7 @@ h1 {
 	border-bottom-style: solid;
     font-weight: bold;
     text-transform: uppercase;
-    margin-left: -15px;
+    margin-left: 0px;
 }
 
 h2 {
@@ -26,17 +27,19 @@ h2 {
     font-weight: bold;
     border-bottom-width: 1px;
     border-bottom-style: solid;
-    margin-left: -15px;
+    margin-left: 0px;
 }
 
 h3 {
     padding-top: 0.8em;
     text-transform: uppercase;
 	font-weight: bold;
+    margin-left: 15px;
 }
 
 h4 {
 	font-weight: bold;
+    margin-left: 15px;
 }
 
 h5 {
@@ -45,7 +48,7 @@ h5 {
     padding-top: -.3em;
     margin-top: -1.2em;
     padding-bottom: .8em;
-    margin-left: -15px;
+    margin-left: 0px;
 }
 
 li {
